--- a/ignews/package.json
+++ b/ignews/package.json
@@ -12,7 +12,8 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "sass": "^1.51.0"
+    "sass": "^1.51.0",
+    "stripe": "^9.8.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.31",
