--- a/ignews/package.json
+++ b/ignews/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/next-auth": "^3.15.0",
     "next": "12.1.6",
+    "next-auth": "^4.10.3",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "sass": "^1.51.0",
