salved user in faunadb

--- a/ignews/.env.local-copy
+++ b/ignews/.env.local-copy
@@ -1,2 +1,9 @@
 STRIPE_API_KEY=API-token-from-atripe
 // need remove copy name from file name
+
+# Gitbhub id
+GITHUB_ID=your-gethub-id
+GITHUB_SECRET=your-git-hub-secret-key
+
+#fauna db
+FAUNA_DB_KEY=your-fauna-db-key
