--- a/ignews/package.json
+++ b/ignews/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/next-auth": "^3.15.0",
+    "faunadb": "^4.7.0",
     "next": "12.1.6",
     "next-auth": "^4.10.3",
     "react": "18.1.0",
