--- a/ignews/package.json
+++ b/ignews/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.38.1",
     "@types/next-auth": "^3.15.0",
+    "axios": "^0.27.2",
     "faunadb": "^4.7.0",
     "next": "12.1.6",
     "next-auth": "^4.10.3",
