--- a/ignews/package.json
+++ b/ignews/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prismicio/client": "^4.7.1",
     "@stripe/stripe-js": "^1.38.1",
     "@types/next-auth": "^3.15.0",
+    "@types/prismic-dom": "^2.1.1",
     "axios": "^0.27.2",
     "faunadb": "^4.7.0",
+    "moment": "^2.29.4",
     "next": "12.1.6",
     "next-auth": "^4.10.3",
+    "prismic-dom": "^2.2.7",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "sass": "^1.51.0",
